Closed
Bug 1342808
Opened 5 years ago
Closed 5 years ago
Can't play video file generated by DJI Mavic Pro
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: jya, Assigned: jya)
Details
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
gerald
:
review+
jcristau
:
approval-mozilla-aurora-
lizzard
:
approval-mozilla-beta+
|
Details |
Some videos play; some show the message that the video can't be played because it's corrupt. They are mov file, so MP4.
Comment hidden (mozreview-request) |
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → jyavenard
Comment 2•5 years ago
|
||
mozreview-review |
Comment on attachment 8842785 [details] Bug 1342808: Ignore user data track. https://reviewboard.mozilla.org/r/116568/#review118174
Attachment #8842785 -
Flags: review?(gsquelart) → review+
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/354fae785150 Ignore user data track. r=gerald
Comment 4•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/354fae785150
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Assignee | ||
Comment 5•5 years ago
|
||
Comment on attachment 8842785 [details] Bug 1342808: Ignore user data track. Approval Request Comment [Feature/Bug causing the regression]: none [User impact if declined]: videos from a popular gadget can't be played [Is this code covered by automated tests?]: yes [Has the fix been verified in Nightly?]: by myself [Needs manual test from QE? If yes, steps to reproduce]: get a mavic pro, record a video, attempt to play it in FF [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: we ignore a mp4 box, that isn't documented. [String changes made/needed]: none
Attachment #8842785 -
Flags: approval-mozilla-beta?
Attachment #8842785 -
Flags: approval-mozilla-aurora?
Comment 6•5 years ago
|
||
Comment on attachment 8842785 [details] Bug 1342808: Ignore user data track. 53 will be beta in a few hours. Did you mean to nominate this for 52? (It's too late for 52.0 at this point, and I'm not sure if this is worth including in a dot release)
Attachment #8842785 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora-
Updated•5 years ago
|
status-firefox52:
--- → wontfix
status-firefox53:
--- → affected
status-firefox-esr52:
--- → affected
Comment on attachment 8842785 [details] Bug 1342808: Ignore user data track. Sound OK for uplift to beta. Drone video aficionados of the world, please test next week with beta 2.
Attachment #8842785 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/d4be754fcafc
You need to log in
before you can comment on or make changes to this bug.
Description
•