Bug 1342808: Ignore user data track. r=gerald

That's the 'udta' box. They serve no purpose as far as we're concerned and stagefright handling of it is buggy.

MozReview-Commit-ID: Af6wCpq2vZr